--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#bb86fc">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pocket Predictor ML</title>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#bb86fc">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 
@@ -19,38 +19,56 @@ body {
 }
 header {
   padding: 15px;
-  font-size: 22px;
+  font-size: 24px;
   font-weight: bold;
 }
-button.card, #confirm, #reset {
-  padding: 12px 16px;
-  margin: 5px;
+#throw-buttons {
+  margin: 10px 0;
+}
+button.card {
+  padding: 14px 18px;
+  margin: 6px;
   background: #1e1e1e;
   color: white;
   border: none;
-  font-size: 18px;
-  border-radius: 8px;
+  font-size: 20px;
+  border-radius: 12px;
+  min-width: 60px;
+  box-shadow: 0 2px 5px #000;
 }
 button.card.selected {
   background: #bb86fc;
   color: black;
-}
-#throw-buttons {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  transform: scale(1.05);
+  transition: 0.1s;
 }
 #confirm {
   display: none;
   background: #03dac6;
   color: black;
+  padding: 12px 20px;
+  font-size: 18px;
+  border-radius: 12px;
+  margin-top: 10px;
+  box-shadow: 0 2px 5px #000;
 }
 #reset {
+  position: fixed;
+  bottom: 15px;
+  left: 15px;
   background: #cf6679;
+  color: white;
+  padding: 10px 16px;
+  font-size: 16px;
+  border-radius: 12px;
+  box-shadow: 0 2px 5px #000;
+  z-index: 999;
 }
 canvas {
   max-width: 95%;
-  margin: auto;
+  margin: 20px auto;
   display: block;
+  border-radius: 12px;
 }
 small {
   display: block;
@@ -65,9 +83,9 @@ small {
   background: #1e1e1e;
   padding: 20px;
   border-radius: 12px;
-  box-shadow: 0 0 15px #bb86fc;
+  box-shadow: 0 0 20px #bb86fc;
   display: none;
-  z-index: 999;
+  z-index: 1000;
 }
 #popup h3 {
   margin: 0 0 10px 0;
@@ -75,7 +93,9 @@ small {
 #popup button {
   margin-top: 10px;
   background: #bb86fc;
-  border-radius: 8px;
+  border-radius: 12px;
+  padding: 8px 12px;
+  font-size: 16px;
 }
 </style>
 </head>
@@ -87,11 +107,11 @@ small {
   <p>Tap 3 cards for this throw (duplicates allowed):</p>
   <div id="card-buttons"></div>
   <button id="confirm" onclick="confirmThrow()">Confirm Throw</button>
-  <button id="reset" onclick="resetHistory()">Reset History</button>
 </div>
 
 <canvas id="pieChart"></canvas>
 <small>Pie chart shows predicted probability per card</small>
+<button id="reset" onclick="resetHistory()">Reset History</button>
 
 <div id="popup">
   <h3>Top 3 Predicted Next Cards</h3>
@@ -99,156 +119,150 @@ small {
   <button onclick="closePopup()">Close</button>
 </div>
 
+<!-- Optional Sounds -->
+<audio id="tapSound" src="tap.mp3"></audio>
+<audio id="confirmSound" src="confirm.mp3"></audio>
+<audio id="resetSound" src="reset.mp3"></audio>
+
 <script>
 const labels = ["9","10","Jack","Queen","King","Ace"];
 let history = JSON.parse(localStorage.getItem("history")) || [];
 let currentThrow = [];
 let cardCounts = Array(6).fill(0);
 
+// Play sound helper
+function playSound(id){ 
+  const audio = document.getElementById(id);
+  if(audio) audio.play().catch(()=>{}); 
+}
+
 // Calculate weighted frequency + sequence prediction
 function calculateScores() {
   let scores = Array(6).fill(0);
-  
-  // Frequency weighting
   history.forEach((throwArr, index) => {
     throwArr.forEach(card => {
-      // More recent throws get higher weight
       let weight = 1 + index/10;
       scores[card] += weight;
     });
   });
-
-  // Sequence-based ML prediction (simple Markov-style)
-  if(history.length > 0) {
+  if(history.length>0){
     let lastThrow = history[history.length-1].join(',');
-    history.forEach((throwArr, idx) => {
-      if(idx < history.length - 1) {
+    history.forEach((throwArr, idx)=>{
+      if(idx<history.length-1){
         let seq = throwArr.join(',');
-        if(seq === lastThrow) {
-          // Next throw
-          history[idx+1].forEach(c => {
-            scores[c] += 2; // add extra weight for following sequence
-          });
+        if(seq===lastThrow){
+          history[idx+1].forEach(c=>scores[c]+=2);
         }
       }
     });
   }
-
   return scores;
 }
 
 // Render Pie Chart
-function renderPie() {
+function renderPie(){
   const ctx = document.getElementById('pieChart').getContext('2d');
   const scores = calculateScores();
   if(window.pie) window.pie.destroy();
-  window.pie = new Chart(ctx, {
-    type: 'pie',
-    data: {
+  window.pie = new Chart(ctx,{
+    type:'pie',
+    data:{
       labels: labels,
-      datasets: [{
-        label: 'Predicted probability',
-        data: scores,
-        backgroundColor: ['#ff6384','#36a2eb','#ffcd56','#bb86fc','#03dac6','#cf6679']
+      datasets:[{
+        label:'Predicted probability',
+        data:scores,
+        backgroundColor:['#ff6384','#36a2eb','#ffcd56','#bb86fc','#03dac6','#cf6679']
       }]
     },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: { position: 'bottom', labels: { color: 'white' } },
-        tooltip: {
-          callbacks: {
-            label: function(context) {
+    options:{
+      responsive:true,
+      plugins:{
+        legend:{position:'bottom',labels:{color:'white'}},
+        tooltip:{
+          callbacks:{
+            label:function(context){
               let sum = context.dataset.data.reduce((a,b)=>a+b,0);
               let val = context.raw;
-              let percent = ((val / sum) * 100).toFixed(1);
+              let percent = ((val/sum)*100).toFixed(1);
               return `${context.label}: ${val.toFixed(1)} (${percent}%)`;
             }
           }
         },
-        datalabels: {
-          color: 'white',
-          formatter: function(value, context) {
-            let sum = context.chart.data.datasets[0].data.reduce((a,b)=>a+b,0);
-            let percent = ((value / sum) * 100).toFixed(1);
-            return percent + '%';
+        datalabels:{
+          color:'white',
+          formatter:function(value,context){
+            let sum=context.chart.data.datasets[0].data.reduce((a,b)=>a+b,0);
+            let percent=((value/sum)*100).toFixed(1);
+            return percent+'%';
           },
-          font: { weight: 'bold', size: 14 }
+          font:{weight:'bold',size:14}
         }
       }
     },
-    plugins: [ChartDataLabels]
+    plugins:[ChartDataLabels]
   });
 }
 
 // Top 3 prediction popup
-function showTop3Popup() {
+function showTop3Popup(){
   const scores = calculateScores();
-  let arr = scores.map((v,i)=>({card: labels[i], score: v}));
-  arr.sort((a,b)=>b.score-a.score);
+  let arr = scores.map((v,i)=>({card:labels[i],score:v}));
+  arr.sort((a,b)=>b.score-b.score);
   let top3 = arr.slice(0,3);
   const container = document.getElementById("top3");
-  container.innerHTML = top3.map(c => `<p>${c.card} (${c.score.toFixed(1)})</p>`).join('');
-  document.getElementById("popup").style.display = "block";
+  container.innerHTML = top3.map(c=>`<p>${c.card} (${c.score.toFixed(1)})</p>`).join('');
+  document.getElementById("popup").style.display="block";
 }
 
-function closePopup() {
-  document.getElementById("popup").style.display = "none";
-}
+function closePopup(){ document.getElementById("popup").style.display="none"; }
 
 // Tap card input
-function addCard(index) {
-  if(currentThrow.length >= 3) return;
-  
+function addCard(index){
+  if(currentThrow.length>=3) return;
   currentThrow.push(index);
   cardCounts[index]++;
-  
   const btn = document.querySelectorAll('button.card')[index];
   btn.classList.add('selected');
-  btn.innerText = cardCounts[index] > 1 ? labels[index] + ' x' + cardCounts[index] : labels[index];
-  
-  if(currentThrow.length === 3){
-    document.getElementById("confirm").style.display = "inline-block";
-  }
+  btn.innerText = cardCounts[index]>1?labels[index]+' x'+cardCounts[index]:labels[index];
+  playSound('tapSound');
+  if(currentThrow.length===3) document.getElementById("confirm").style.display="inline-block";
 }
 
 // Confirm throw
-function confirmThrow() {
+function confirmThrow(){
   history.push([...currentThrow]);
-  localStorage.setItem("history", JSON.stringify(history));
-  
-  currentThrow = [];
-  cardCounts = Array(6).fill(0);
-  
-  const btns = document.querySelectorAll('button.card');
-  btns.forEach((b,i)=>{
+  localStorage.setItem("history",JSON.stringify(history));
+  currentThrow=[];
+  cardCounts=Array(6).fill(0);
+  document.querySelectorAll('button.card').forEach((b,i)=>{
     b.classList.remove('selected');
     b.innerText = labels[i];
   });
-  
-  document.getElementById("confirm").style.display = "none";
+  document.getElementById("confirm").style.display="none";
+  playSound('confirmSound');
   renderPie();
   showTop3Popup();
 }
 
 // Reset history
-function resetHistory() {
-  if(confirm("Are you sure you want to reset history?")) {
-    history = [];
-    localStorage.setItem("history", JSON.stringify(history));
+function resetHistory(){
+  if(confirm("Are you sure you want to reset history?")){
+    history=[];
+    localStorage.setItem("history",JSON.stringify(history));
     renderPie();
+    playSound('resetSound');
   }
 }
 
 // Render card buttons
-function renderButtons() {
-  const container = document.getElementById('card-buttons');
-  container.innerHTML = '';
+function renderButtons(){
+  const container=document.getElementById('card-buttons');
+  container.innerHTML='';
   labels.forEach((lbl,i)=>{
-    const btn = document.createElement('button');
-    btn.innerText = lbl;
-    btn.className = 'card';
-    btn.onclick = ()=>addCard(i);
+    const btn=document.createElement('button');
+    btn.innerText=lbl;
+    btn.className='card';
+    btn.onclick=()=>addCard(i);
     container.appendChild(btn);
   });
 }
